--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -39,8 +39,9 @@
 
     <version
         name="2.8.4"
-        description="February 18th, 2018">
+        description="February 22nd, 2018">
         <text>Crash/ANR fixes</text>
+        <text>Improvements to sms: and smsto: web link handling</text>
     </version>
 
     <version
