convert the repeat notification service into a broadcast receiver to use with the alarm manager, instead of a job service

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -38,6 +38,12 @@
     <!--</version>-->
 
     <version
+        name="2.8.5"
+        description="February 23rd, 2018">
+        <text>Improvements around scheduled messages and repeat notifications</text>
+    </version>
+
+    <version
         name="2.8.4"
         description="February 23rd, 2018">
         <text>Crash/ANR fixes</text>
