--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -29,7 +29,14 @@
         <!--<text>Auto reply support. Build auto replies for vacation responses, driving mode, specific contacts, or based on an expression (TODO: remove the feature flag and uncomment the quick settings service in the app's Android Manifest)</text>-->
         <!--<text>Button to send scheduled messages immediately (TODO: remove the feature flag)</text>-->
     <!--</version>-->
-
+  
+    <version
+        name="2.9.6"
+        description="April 8th, 2018">
+        <!-- Fixes around notifications: HTML entities getting hidden and heads up notifications displaying old content -->
+        <text>Bug fixes</text>
+    </version>
+  
     <version
         name="2.9.5"
         description="April 4th, 2018">
