--- a/shared/src/main/res/xml/settings_features.xml
+++ b/shared/src/main/res/xml/settings_features.xml
@@ -11,6 +11,12 @@
             android:summary="@string/auto_reply_configuration_summary" />
 
         <Preference
+            android:defaultValue="false"
+            android:key="@string/pref_secure_private_conversations"
+            android:summary="@string/secure_private_conversations_summary"
+            android:title="@string/secure_private_conversations" />
+
+        <Preference
             android:key="@string/pref_message_backup"
             android:title="@string/message_backup"
             android:summary="@string/message_backup_pref_summary" />
@@ -22,12 +28,6 @@
             android:key="@string/pref_cleanup_messages"
             android:title="@string/cleanup_old_messages"
             android:summary="@string/cleanup_old_messages_summary"/>
-
-        <SwitchPreference
-            android:defaultValue="false"
-            android:key="@string/pref_secure_private_conversations"
-            android:summary="@string/secure_private_conversations_summary"
-            android:title="@string/secure_private_conversations" />
 
         <SwitchPreference
             android:key="@string/pref_internal_browser"
