--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -124,6 +124,7 @@
 
     <color name="darkText">#E2000000</color>
     <color name="lightText">#FFFFFFFF</color>
+    <color name="lightSecondaryText">#B2FFFFFF</color>
 
     <color name="subscriptionPrimaryText">#E2000000</color>
     <color name="subscriptionSecondaryText">#8C000000</color>
