--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,10 +19,17 @@
     <!--<version-->
         <!--name="2.11.0"-->
         <!--description="May, 2018">-->
-        <!--<text>Support private conversations that require a passcode or fingerprint to read (TODO: remove the feature flag and remove the fingerprint permission blocker from the shared/AndroidManifest.xml)</text>-->
+        <!--<text>Support private conversations that require a passcode or fingerprint (TODO: remove the feature flag and remove the fingerprint permission blocker from the shared/AndroidManifest.xml)</text>-->
         <!--<text>Display name, phone number, and location - on the message list - from vCards that you send and receive (TODO: remove the feature flag)</text>-->
         <!--<text>Handle iOS location sharing messages with location preview (TODO: remove the feature flag)</text>-->
     <!--</version>-->
+
+    <version
+        name="2.10.3"
+        description="April 20, 2018">
+        <!-- Unique IDs on notification actions -->
+        <text>Bug fixes</text>
+    </version>
 
     <version
         name="2.10.2"
