--- a/shared/src/main/res/xml/settings_mms.xml
+++ b/shared/src/main/res/xml/settings_mms.xml
@@ -4,6 +4,7 @@
     <SwitchPreference
         android:key="@string/pref_group_mms"
         android:title="@string/use_group_mms"
+        android:summary="@string/use_group_mms_summary"
         android:defaultValue="true" />
 
     <SwitchPreference
@@ -11,6 +12,12 @@
         android:title="@string/auto_save_media"
         android:summary="@string/auto_save_media_summary"
         android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="@string/pref_mms_read_receipts"
+        android:title="@string/use_mms_read_receipts"
+        android:summary="@string/use_mms_read_receipts_summary"
+        android:defaultValue="true" />
 
     <ListPreference
         android:key="@string/pref_mms_size"
