--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -16,31 +16,26 @@
 
 <changelog>
 
-    <!--<version-->
-        <!--name="2.11.0"-->
-        <!--description="May, 2018">-->
-        <!--<text>Support private conversations that require a passcode or fingerprint (TODO: remove the feature flag and remove the fingerprint permission blocker from the shared/AndroidManifest.xml)</text>-->
-        <!--<text>Display name, phone number, and location - on the message list - from vCards that you send and receive (TODO: remove the feature flag)</text>-->
-        <!--<text>Handle iOS location sharing messages with location preview (TODO: remove the feature flag)</text>-->
-    <!--</version>-->
-
     <version
-        name="2.10.3"
-        description="April 20, 2018">
+        name="2.11.0"
+        description="April 26th, 2018">
         <!-- Unique IDs on notification actions -->
-        <text>Bug fixes</text>
+        <text>Support for a private conversation inbox, with optional password protection, to hide your secret conversations</text>
+        <text>Preview information on sent and received contact vCards</text>
+        <text>Handle iOS location sharing messages with location preview</text>
+        <text>Bug fixes and performance improvements</text>
     </version>
 
     <version
         name="2.10.2"
-        description="April 20, 2018">
+        description="April 20th, 2018">
         <!-- Improve feature toggle to hide the private messages item -->
         <text>Bug fixes</text>
     </version>
 
     <version
         name="2.10.1"
-        description="April 17, 2018">
+        description="April 17th, 2018">
         <!-- Implemented everything for the private conversations -->
         <!-- A "downloading media" and "uploading media" notification was always shown - indefinitely - if the user had no media to upload/download -->
         <text>Bug/crash fixes</text>
@@ -48,7 +43,7 @@
 
     <version
         name="2.10.0"
-        description="April 15, 2018">
+        description="April 15th, 2018">
         <!-- Added initial support around the private messages feature (drawer item, settings item, working fragment, etc.). Did not build the activity to enter the passcode, yet -->
         <!-- fix html encoding on notifications for Android 6.0 and below -->
         <text>Auto reply support under the advanced features section. Build automated replies for vacation responses, driving mode, specific contacts, or based on an expression/keyword that you define</text>
