fix an issue with dual sim

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="April 26th, 2018">
         <!-- Unique IDs on notification actions -->
         <!-- Brought in v5.0.0 of the sms/mms lib with changes to backgrounding all the receivers -->
+        <!-- Only provide the subscription id if there is more than one SIM card inserted. The user could set up dual sim on conversations, then remove a SIM card -->
         <text>Support for a private conversation inbox, with optional password protection, to hide your secret conversations</text>
         <text>Preview information on sent and received contact vCards</text>
         <text>Handle iOS location sharing messages with location preview</text>
