--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -16,12 +16,12 @@
 
 <changelog>
 
-    <version
-        name="3.0.0"
-        description="May, 2018">
-        <text>Support for creating and accessing folders to organize conversations (TODO: Remove folder feature flag and uncomment the new menu style in the navigation_drawer_conversations.xml file)</text>
-        <text>Filter only unread conversations, from the navigation drawer</text>
-    </version>
+    <!--<version-->
+        <!--name="3.0.0"-->
+        <!--description="May, 2018">-->
+        <!--<text>Support for creating and accessing folders to organize conversations (TODO: Remove folder feature flag and uncomment the new menu style in the navigation_drawer_conversations.xml file)</text>-->
+        <!--<text>Filter only unread conversations, from the navigation drawer</text>-->
+    <!--</version>-->
 
     <version
         name="2.11.0"
