--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -68,6 +68,7 @@
     <string name="pref_contact_notification_group" translatable="false">notification_group</string>
 
     <string name="pref_general_category" translatable="false">general_settings_category</string>
+    <string name="pref_folders_category" translatable="false">folders_category</string>
     <string name="pref_conversation_list" translatable="false">conversation_list_category</string>
     <string name="pref_theme_settings" translatable="false">theme_settings</string>
     <string name="pref_global_primary_color" translatable="false">global_primary_color</string>
